# Django-LoginApp

./: Dockerfile  README.md  manage.py  pyproject.toml  signup.html
app/: forms.py  models.py  views.py
app/static/css/: style.css
django_project/: settings.py  urls.py  wsgi.py
django_project /: admin.py
templates/app/: home.html  login.html  signup.html
